--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ torchlambertw = { git = "https://github.com/gmgeorg/torchlambertw.git", rev = "v
 [tool.poetry.group.dev.dependencies]
 pytest = ">=6.1.1"
 ruff = "^0.2.1"
+pre-commit = "^3.7.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
