--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ numpy>=1.0.1
 pandas>=1.0.0
 pytest>=6.1.1
 scikit-learn>=1.0.1
-scipy~=1.6.0
+scipy>=1.7.0
 seaborn>=0.11.1
 statsmodels>=0.12.0
 torch>=2.0.1
